--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "VitestReactNative",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "esbuild-plugin-flow": "^0.3.2",
     "react": "18.2.0",
     "react-native": "0.73.0"
   },
