--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "esbuild-plugin-flow": "^0.3.2",
+    "jsdom": "^23.0.1",
     "react": "18.2.0",
     "react-native": "0.73.0"
   },
@@ -23,11 +24,14 @@
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
-    "@testing-library/react-native": "^12.4.1",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
     "prettier": "2.8.8",
+    "react-native-web": "^0.19.9",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4",
     "vitest": "^1.0.4"
