--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "esbuild-plugin-flow": "^0.3.2",
     "jsdom": "^23.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-elements": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
