--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jsdom": "^23.0.1",
     "react": "18.2.0",
     "react-native": "0.73.0",
-    "react-native-elements": "^3.4.3"
+    "react-native-elements": "^3.4.3",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
