chore: migrate to yarn

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,11 @@ yarn-error.log
 # testing
 /coverage
 .vite-node
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
