--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test": "vitest"
   },
   "dependencies": {
-    "esbuild-plugin-flow": "^0.3.2",
     "jsdom": "^23.0.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.0",
     "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-vector-icons": "^10.0.2",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.6",
+    "@types/react-dom": "^18",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
     "prettier": "2.8.8",
@@ -40,5 +43,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
