--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-vector-icons": "^10.0.2",
-    "styled-components": "^6.1.1"
+    "styled-components": "patch:styled-components@npm%3A6.1.1#~/.yarn/patches/styled-components-npm-6.1.1-10768abb38.patch"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
